posiGen_FullsendBox/src/objects/Business_Process_Use_Case__c.object
<CustomObject>
    <fields>
        <fullName>Business_Process__c</fullName>
        <label>Business Process</label>
        <referenceTo>Business_Process__c</referenceTo>
        <relationshipLabel>Use Cases</relationshipLabel>
        <relationshipName>Business_Process_Use_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Business Processes</relationshipLabel>
        <relationshipName>Business_Process_Use_Cases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Business Process Use Case</label>
    <nameField>
        <label>Business Process Use Cases Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Process Use Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>